# shadowpay

./: .env.example  .gitignore  README.md  SETUP.md  SHADOWPAY_COMPLETE_BIBLE.md  SHADOWPAY_DB_UPDATE.md  SHADOWPAY_MASTER_CONTEXT.md
anchor/: Anchor.toml
anchor/programs/shadowpay/: Cargo.toml
anchor/programs/shadowpay/src/: errors.rs  lib.rs
anchor/programs/shadowpay/src/instructions/: close_account.rs  mod.rs
anchor/programs/shadowpay/src/state/: payment_record.rs
app/: next.config.ts  package-lock.json  package.json
app/app/: layout.tsx  providers.tsx
app/components/identity/: WorldIDButton.tsx
app/components/onramp/: MoonPayWidget.tsx
app/components/payments/: BalanceDisplay.tsx  PaymentCard.tsx  SendForm.tsx
app/hooks/: useAnchorProgram.ts  useBalance.ts  usePayments.ts  usePrivyWallet.ts  useSendPayment.ts
app/lib/arcium/: client.ts  decrypt.ts  encrypt.ts
app/lib/db/: mongodb.ts
app/lib/realtime/: firebase.ts
app/lib/solana/: pdas.ts
shadowpay/: .env.local  Anchor.toml
shadowpay/programs/shadowpay/: Cargo.toml
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  providers.tsx
web/components/auth/: PrivacyUnlocker.tsx
web/components/identity/: WorldIDButton.tsx
web/components/payments/: ActivityFeed.tsx  BalanceCard.tsx  SendForm.tsx
web/hooks/: useBalance.ts  useContacts.ts  usePayments.ts  useRealtimePayments.ts  useSendPayment.ts  useWorldID.ts
web/lib/: constants.ts  errors.ts
web/lib/arcium/: decrypt.ts  encrypt.ts  utils.ts
web/store/: useAppStore.ts  usePrivacyStore.ts
(+38 files in other folders)
