[package]
name = "shadowpay"
version = "0.1.0"
description = "ShadowPay — Private P2P payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowpay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
